--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./publics/css/style.css">
-    <link rel="shortcut icon" href="./publics/images/nvc_1.jpg" type="image/x-icon">
+    <link rel="shortcut icon" href="./publics/images/pl3.jpg" type="image/x-icon">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <title>happy Birthday Vân Anh</title>
+    <title>happy Birthday Phương Linh</title>
 </head>
 <body>
     <div class="container">
@@ -75,7 +75,7 @@
             <div class="boxMail-container">
                 <div class="card1">
                     <div class="userImg">
-                        <img src="./publics/images/nvc2.jpg" alt="">
+                        <img src="./publics/images/pl2.jpg" alt="">
                     </div>
                     <h3>Happy birthday</h3>
                     <div class="imageCute">
@@ -84,13 +84,13 @@
                 </div>
                 <div class="card2">
                     <div class="card2-content">
-                        <h3>Chúc mừng sinh nhật bạn Vân Anh !</h3>
-                        <h2>Chúc bạn luôn xinh đẹp , giàu và sớm có người yêu ^_^</h2>
-                         <div class="imageCute2">
-                            <img src="./publics/images/nvc3.jpg" alt="">
-                         </div>
+                        <h3>Chúc mừng sinh nhật Phuơng Linh !</h3>
+                        <h2>Chúc em luôn vui vẻ , xinh đẹp và sớm thực hiện được ước mơ của mình nha ^_^ </h2>
+                        <div class="imageCute2">
+                            <img src="./publics/images/pl.jpg" alt="" width="50%">
+                        </div>
                          <div class="imageCute3">
-                            <img src="./publics/images/nvc_1.jpg" alt="" width="100%">
+                            <img src="./publics/images/pl4.jpg" alt="" width="100%">
                          </div>
                     </div>
                 </div>
